# arms

arms/: CMakeLists.txt  package.xml
arms_bringup/: CMakeLists.txt  package.xml
arms_bringup/config/: ros2_control.yaml
arms_bringup/launch/: arm.launch.py  arm_gazebo_launch.py  arm_moveit_launch.py  arm_ros2_control_launch.py  arm_world_launch.py
arms_bringup/worlds/: empty.sdf  playground.sdf
arms_utils/: package.xml  setup.cfg  setup.py
arms_utils/arms_utils/: replace_string.py
gen3_lite/gen3_lite_description/: package.xml
gen3_lite/gen3_lite_description/rviz/: gen3_lite.rviz
gen3_lite/gen3_lite_description/urdf/: gen3_lite.urdf.xacro  gen3_lite_macro.urdf.xacro  macros.urdf.xacro
gen3_lite/gen3_lite_description/urdf/camera/: d435.urdf.xacro
gen3_lite/gen3_lite_description/urdf/gz/: gen3_lite.gazebo.xacro
gen3_lite/gen3_lite_description/urdf/ros2_control/: gen3_lite_ros2_control.xacro
gen3_lite/gen3_lite_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gen3_lite/gen3_lite_moveit_config/config/: kinematics.yaml  moveit.rviz  ompl_planning.yaml
gen3_lite/gen3_lite_moveit_config/config/gen3_lite_kinova_2f_lite/: gen3_lite_template.srdf  joint_limits_template.yaml
grippers/kinova_2f_lite/kinova_2f_lite_description/: package.xml
grippers/kinova_2f_lite/kinova_2f_lite_description/config/: initial_position.yaml  joint_limits.yaml
grippers/kinova_2f_lite/kinova_2f_lite_description/urdf/: kinova_2f_lite_macro.urdf.xacro  macros.urdf.xacro
(+1 files in other folders)
