<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arms_bringup</name>
  <version>0.0.0</version>
  <description>Launch package for bringing up robotic arms, including simulation, controllers, and visualization.</description>
  <maintainer email="nilton.csv18@edu.udesc.br">nilton</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_ros2_control</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>xacro</depend>
  <!-- to use ReplaceString -->
  <depend>nav2_common</depend>

  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
